# asfship

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: advanced-configuration.md  templates-and-artifacts.md
src/: config.rs  discussion.rs  github.rs  infer.rs  main.rs  preflight.rs  rc_release.rs  release_cmd.rs  start.rs  sync.rs  versioning.rs  vote.rs
src/versioning/: apply.rs  mod.rs  plan.rs  rc.rs
templates/: release.md  start.md  vote.md
tests/: asfship_tests.rs  snapshot_cli.rs
