[package]
name = "asfship"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
cargo_metadata = "0.18.1"
clap = { version = "4.5.16", features = ["derive"] }
git2 = "0.19.0"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
semver = "1.0.23"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "fs", "process"] }
toml_edit = "0.22.22"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "ansi"] }
octocrab = "0.38.0"
tar = "0.4.40"
flate2 = { version = "1.0.35", default-features = false, features = ["rust_backend"] }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
sha2 = "0.10.8"
hex = "0.4.3"
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls"] }
urlencoding = "2.1.3"

[dev-dependencies]
insta = { version = "1.39.0", features = ["glob"] }
assert_cmd = "2.0.16"
tempfile = "3.12.0"
